# CAFE-MPC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
HKDMPC/: HKDMPC.cpp  HKDMPC.h  ddp_setting.info
HKDMPC/HKD-TrajOpt/: HKDCost.cpp  HKDCost.h  HKDModel.h  HKDProblem.cpp  HKDProblem.h  HKDReference.cpp
HKDMPC/log/: control_log.txt  cost_log.txt  state_log.txt  value_grad_log.txt
HKDMPC/settings/: constraint_params.info  ddp_setting.info
HSDDPSolver/: CMakeLists.txt
HSDDPSolver/common/: HSDDP_CompoundTypes.h
HSDDPSolver/header/: ConstraintsBase.h  MultiPhaseDDP.h  SinglePhase.h  SinglePhaseBase.h  SinglePhaseInterface.h  TrajectoryManagement.h
HSDDPSolver/source/: MultiPhaseDDP.cpp  SinglePhase.cpp  SinglePhaseInterface.cpp  TrajectoryManagement.cpp
MHPC/: CMakeLists.txt  MHPCLocomotion.cpp  MHPCLocomotion.h  MHPCUtils.cpp  MHPCUtils.h  ddp_setting.info  mhpc_config.info  mpc_main.cpp
MHPC/MHPC-Trajopt/: CMakeLists.txt  MHPCConstraint.cpp  MHPCConstraint.h  MHPCCost.cpp  MHPCCost.h  MHPCCostUtil.h  MHPCFootStep.h  MHPCProblem.cpp  MHPCProblem.h  MHPCReference.cpp  MHPCReference.h  MHPCReset.cpp  MHPCReset.h  PinocchioInteface.cpp  SRBM.h  WBM.cpp  WBM.h
MHPC/MHPC-Trajopt/BarrelRoll/: BarrelRollConstraints.cpp  BarrelRollConstraints.h  BarrelRollTO.cpp  CMakeLists.txt
MHPC/MHPC-Trajopt/BarrelRoll/setting/: br_constraint_params.info  br_cost_weights.JSON  br_ddp_setting.info
MHPC/MHPC-Trajopt/CasadiGen/: CMakeLists.txt
MHPC/MHPC-Trajopt/CasadiGen/header/: casadiGen_MHPC.h
MHPC/MHPC-Trajopt/CasadiGen/source/: MCKinematicsDerivativs.cpp  SRBDynamics.cpp
MHPC/MHPC-Trajopt/Locomotion/: CMakeLists.txt  LocoProblem.cpp  LocoProblem.h  Loco_TO.cpp
MHPC/MHPC-Trajopt/Locomotion/settings/: loco_config.info  loco_constraint_params.info  loco_cost_weights.JSON
MHPC/MHPC-Trajopt/test/: CMakeLists.txt  SRBPlanning_config.info  testBarrelRollTO.cpp  testKKTDynamics.cpp  testMHPCConstraint.cpp  testMHPCCost.cpp  testMHPCProblem.cpp  testMHPCProblem2.cpp  testMHPCReference.cpp  testMHPCReset.cpp  testSRBDynamics.cpp  testSRBPlanning.cpp  testTrajOptInLoop.cpp
MHPC/log/: control_log.txt  cost_log.txt  dynamics_partial_A.txt  dynamics_partial_B.txt  state_log.txt  value_grad_log.txt
MHPC/settings/: constraint_params.info  constraint_params_barrel.info  constraint_params_regular.info  cost_weights_barrel.JSON  cost_weights_regular.JSON  ddp_setting.info  mhpc_config.info
Reference/: QuadReference.cpp  QuadReference.h
Reference/Data/: quad_reference.csv
Reference/Data/bound/: quad_reference.csv
Reference/Data/bound/1.0/: quad_reference.csv
Reference/Data/bound/jump/: quad_reference.csv
Reference/Data/flypace/: quad_reference.csv
Reference/Data/flytrot/: quad_reference.csv
Reference/Data/flytrot/dynfeas/: quad_reference.csv
Reference/Data/gaitLib/bounding/: quad_reference.csv
Reference/Data/gaitLib/stand/: quad_reference.csv
Reference/Data/inplace_br/: quad_reference.csv
Reference/Data/inplace_br/dyn_feas/: quad_reference.csv
Reference/Data/pace/: quad_reference.csv
Reference/Data/pace_br_pace/: quad_reference.csv
Reference/Data/pace_br_pace/00/: quad_reference.csv
Reference/Data/pace_br_pace/01_jump_forward/: quad_reference.csv
Reference/Data/pronk/: quad_reference.csv
Reference/Data/pronk_br_pronk/: quad_reference.csv
Reference/Data/pronk_br_pronk/01/: quad_reference.csv
Reference/Data/pronk_br_pronk/02/: quad_reference.csv
Reference/Data/running_br/: quad_reference.csv
Reference/Data/running_br/flight_period_400ms_plus100/: quad_reference.csv
Reference/Data/running_br/flight_period_400ms_plus150/: quad_reference.csv
Reference/Data/running_br/flight_period_500ms/: quad_reference.csv
Reference/Data/trot/: quad_reference.csv
Reference/Data/trot/dynfeas/: quad_reference.csv
Reference/Data/trot/heuristic/: quad_reference.csv
Reference/Data/trot_br_trot/: quad_reference.csv
common/: casadi_interface.cpp  casadi_interface.h
lcmtypes/: MHPC_Command_lcmt.lcm  wbTraj_lcmt.lcm
scripts/: install_dependencies.sh  install_dependencies_cheetah_software.sh
scripts/PyBullet/: animator.py  visualize_motion.py  visualize_wb_trajectory.py
scripts/Reference/: foothold_plan.py  gait_schedule.py  interpolation.py  reference_management.py  run.py  utils.py
scripts/Reference/data/: contact.csv
scripts/ReferenceGen/: generate_reference.m
scripts/ReferenceGen/PostProcessedData/: quad_reference.csv
scripts/ReferenceGen/PreProcessedData/: preprocess.m
scripts/ReferenceGen/PreProcessedData/Bound/: body_state.csv  contact.csv  ee_pos.csv  ee_vel.csv  jnt.csv  time.csv
scripts/ReferenceGen/PreProcessedData/Pace/: jnt.csv  (+3 more)
scripts/Reference_matlab/: combine_two_gaits.m  flip_left_and_right.m  generate_reference.m  read_gait_from_file.m
scripts/Reference_matlab/PostProcessedData/: quad_reference.csv
scripts/Reference_matlab/PreProcessedData/: preprocess.m
scripts/Reference_python/: barrel_roll.py  body_trajectory_plan.py  foothold_plan.py  gait_schedule.py  gen_regular.py  gen_regular_arcdog.py  gen_run_jump.py  gen_run_jump_arcdog.py  mini_cheetah_pybullet.py  quad_mode_definition.py  reference_management.py  run.py  run_barrel.py  run_regular.py  swing_trajectory_plan.py  test.py  utils.py
scripts/Reference_python/data/: body_state.csv  contact.csv  ee_pos.csv  jnt.csv
scripts/Visualization/: animate_motion.py  animator.py  mini_cheetah.py  show_trajectory.py  visualize_motion.py  visualize_wb_trajectory.py
urdf/: arcdog_simple_correctedInertia.urdf  mini_cheetah_simple_correctedInertia.urdf
(+218 files in other folders)
